MAINT: Refactor Vector to List